crates/pact_verifier/src/snapshots/pact_verifier__tests__process_comments_with_multiple_reference_groups.snap
---
source: pact_verifier/src/tests.rs
assertion_line: 1212
expression: "output.join(\"\\n\")"
---

  References:
    asyncapi:
      operationId: publishOrder
    openapi:
      operationId: getOrder
      path: /orders/{id}
