crates/pact_verifier/src/snapshots/pact_verifier__tests__process_comments_with_references_combined_with_text_and_testname.snap
---
source: pact_verifier/src/tests.rs
assertion_line: 1231
expression: "output.join(\"\\n\")"
---

  Test Name: a consumer test

  Comments:
a comment


  References:
    asyncapi:
      operationId: publishOrder
